# smartsocks

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/kkt/rtcdatachanneldemo/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/kkt/smartsocks/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/kkt/rtcdatachanneldemo/: GuardedProcess.kt  HttpParser.kt  HttpRequest.kt  HttpRequestListener.kt  MainActivity.kt  RtcClient.kt  RtcPeerContainer.kt  SSProxyServer.kt
app/src/main/java/com/kkt/smartsocks/: GuardedProcess.kt  HttpParser.kt  HttpRequest.kt  HttpRequestListener.kt  MainActivity.kt  PeerListAdapter.kt  RtcClient.kt  RtcInstance.kt  RtcMainActivity.kt  RtcPeerContainer.kt  SSProxyServer.java  SSProxyServer.kt  Utils.kt
app/src/main/java/com/kkt/smartsocks/core/: AppInfo.java  AppProxyManager.java  ChinaIpMaskManager.java  DnsProxy.java  HttpHostHeaderParser.java  LocalVpnService.java  NatSession.java  NatSessionManager.java  ProxyConfig.java  TcpProxyServer.java  TunnelFactory.java
app/src/main/java/com/kkt/smartsocks/dns/: DnsFlags.java  DnsHeader.java  DnsPacket.java  Question.java  Resource.java  ResourcePointer.java
app/src/main/java/com/kkt/smartsocks/rtc/: DTMainActivity.java  HttpParser.kt  HttpRequest.kt  HttpRequestListener.kt  PeerListAdapter.kt  RtcClient.kt  RtcInstance.kt  RtcMainActivity.kt  RtcPeerContainer.kt  SSProxyServer.java  Utils.kt
app/src/main/java/com/kkt/smartsocks/tcpip/: CommonMethods.java  IPHeader.java  TCPHeader.java  UDPHeader.java
app/src/main/java/com/kkt/smartsocks/tunnel/: Config.java  RawTunnel.java  Tunnel.java
app/src/main/java/com/kkt/smartsocks/tunnel/datagram/: BLVEncoder.java  DatagramConfig.kt  DatagramTunnel.java  Socks5Protocol.kt
app/src/main/java/com/kkt/smartsocks/tunnel/httpconnect/: HttpConnectConfig.java  HttpConnectTunnel.java
app/src/main/java/com/kkt/smartsocks/tunnel/shadowsocks/: AesCrypt.java  BlowFishCrypt.java  CamelliaCrypt.java  Chacha20Crypt.java  CryptBase.java  CryptFactory.java  ICrypt.java  Rc4Md5Crypt.java  SeedCrypt.java  ShadowSocksKey.java  ShadowsocksConfig.java  ShadowsocksTunnel.java
app/src/main/java/com/kkt/smartsocks/ui/: AppManager.java  MainActivity.java
app/src/main/java/com/vm/shadowsocks/core/: LocalVpnService.java
app/src/main/java/com/vm/shadowsocks/ui/: AppManager.java  MainActivity.java
app/src/main/jni/libsodium/src/libsodium/crypto_onetimeauth/poly1305/sse2/: poly1305_sse2.c
app/src/main/jni/mbedtls/include/mbedtls/: bignum.h  md.h  md2.h  md4.h  md5.h  oid.h  ripemd160.h  sha1.h  sha256.h  sha512.h  ssl.h  timing.h
app/src/main/jni/mbedtls/programs/ssl/: ssl_client2.c
app/src/main/jni/shadowsocks-libev/libipset/src/libipset/bdd/: basics.c
app/src/main/jni/shadowsocks-libev/src/: crypto.c  server.c  stream.c
app/src/main/jni/smartsocks-jni/: ssproxyserver.c  vpninterface.c
app/src/main/res/layout/: activity_dt_main.xml  activity_main.xml  activity_rtc_main.xml  content_main.xml  peer_list_item.xml  peers_list_item.xml
app/src/main/res/menu/: main_activity_actions.xml  menu_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-v11/: styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/com/kkt/rtcdatachanneldemo/: ExampleUnitTest.kt
app/src/test/java/com/kkt/smartsocks/: ExampleUnitTest.kt
blockchain/: build.gradle
blockchain/src/androidTest/java/io/smarttangle/blockchain/: ExampleInstrumentedTest.java
blockchain/src/main/: AndroidManifest.xml
blockchain/src/main/res/layout/: dialog_loading.xml  login_activity.xml  mine_activity.xml  proxy_servers_activity.xml  proxy_zones_activity.xml  register_activity.xml  services_list_item.xml  transaction_activity.xml  zones_list_item.xml
blockchain/src/main/res/menu/: login_menu.xml  menu_main.xml
blockchain/src/main/res/values/: dimens.xml  strings.xml  styles.xml
blockchain/src/test/java/io/smarttangle/blockchain/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
rtc/: build.gradle
rtc/src/androidTest/java/com/kkt/rtc/: ExampleInstrumentedTest.java
rtc/src/main/: AndroidManifest.xml
rtc/src/main/java/com/kkt/rtc/: AsyncHttpURLConnection.kt  RtcAgent.kt  RtcAgentContainer.kt  RtcEngine.kt  RtcLogging.kt  RtcSignalling.kt
rtc/src/main/res/values/: strings.xml
rtc/src/test/java/com/kkt/rtc/: ExampleUnitTest.java
sslocal/: build.gradle
sslocal/src/androidTest/java/com/kkt/sslocal/: ExampleInstrumentedTest.java
sslocal/src/androidTest/java/com/kkt/sstunnel/: ExampleInstrumentedTest.java
sslocal/src/androidTest/java/com/kkt/ssvpn/: ExampleInstrumentedTest.java
sslocal/src/main/: AndroidManifest.xml
sslocal/src/main/java/com/kkt/crypto/: AesCrypt.java  BlowFishCrypt.java  CamelliaCrypt.java  Chacha20Crypt.java  CryptBase.java  CryptFactory.java  ICrypt.kt  NoneCryptor.kt  Rc4Md5Crypt.java  SeedCrypt.java  ShadowSocksKey.kt
sslocal/src/main/java/com/kkt/cryptor/: ICrypt.kt  NoneCryptor.kt
sslocal/src/main/java/com/kkt/dns/: DNSFlags.kt  DNSHeader.kt  DNSPacket.kt  QueryState.kt  Question.kt  Resource.kt
sslocal/src/main/java/com/kkt/http/: HttpHeaderParser.kt
sslocal/src/main/java/com/kkt/sscontrol/: SSVpnControl.kt
sslocal/src/main/java/com/kkt/sslocal/: IPAddress.kt  SSLocalLogging.kt  SSVpnConfig.kt  SSVpnImplService.kt  SSVpnService.kt  TCPProxyServer.kt  UDPProxyServer.kt
sslocal/src/main/java/com/kkt/sstunnel/: LocalTunnel.kt  SSLocalLogging.kt  SSVpnConfig.kt  SSVpnImplService.kt  SSVpnService.kt  Tunnel.kt  (+1 more)
sslocal/src/main/res/values/: strings.xml
ssserver/: build.gradle
ssserver/src/main/: AndroidManifest.xml
ssserver/src/main/jni/shadowsocks-libev/: CMakeCache.txt  CMakeLists.txt
ssserver/src/main/jni/shadowsocks-libev/src/: utils.c
ssserver/src/main/jni/smartsocks-jni/: ssproxyserver.c  vpninterface.c
ssserver/src/main/res/values/: strings.xml
(+48 files in other folders)
